# ChangeLog for x11-libs/qt-assistant
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.6 2008/05/16 09:24:17 ingmar Exp $

  16 May 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -qt-assistant-4.4.0_rc1.ebuild:
  Old.

*qt-assistant-4.4.0 (15 May 2008)

  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +qt-assistant-4.4.0.ebuild:
  Version bump to Qt-4.4.0.

  10 Apr 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -qt-assistant-4.4.0_beta1.ebuild, +qt-assistant-4.4.0_rc1.ebuild:
  Version bump qt-assistant to 4.4.0_rc1. Thanks to Bo Andresen and Bernd
  Steinhauser.

  05 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -qt-assistant-4.4.0_rc1.ebuild:
  Old.

*qt-assistant-4.4.0_beta1 (05 Mar 2008)

  05 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +qt-assistant-4.4.0_beta1.ebuild:
  Added Qt-4.4.0_beta, note that the RC1 is an accidentally mislabelled
  `technical preview`, so this will appear as a downgrade if you installed
  that version.
  Fixes bug 212108, thanks to Markus Rothe.

*qt-assistant-4.4.0_rc1 (24 Dec 2007)

  24 Dec 2007; Caleb Tennis <caleb@gentoo.org> +metadata.xml,
  +qt-assistant-4.4.0_rc1.ebuild:
  Initial ebuild
